# cov

./: .env.sample  .gitignore  .sqlfluff  Cargo.toml  LICENCE  README.md  SECURITY.md  codecov.yml  docker-compose.yaml  go.mod  go.sum  justfile  main.go  renovate.json  rustfmt.toml  sqlc.yml
.github/workflows/: actionlint.yml  build.yaml  codeql-analysis.yml  go.yml  sample-cxx.yml  sample-go.yml  sample-jest.yml  sample-jvm.yml  sqlfluff.yml  tests.yaml  zizmor.yml
.sqlx/: query-1daa31639aa6223d6cfb1650595b31063681619cea06668effad7fa94cb32e7d.json  query-3d7ebe93e552692fedc80e2c37f4ca0a0de12b835a6a47f1442609bd9291aa19.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-606fe5e976ce03fa7d2a196d17b2e26cd81ae2ac12d343c732dcecfb60a4625c.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9a2ef7ea56bf394f81bbfb06b4d316d13f37fea29b920bc9341dbf1ae2ca11b0.json  query-9f6ea9bc40630a0fbb62e612dd4e308ae8e6a65098df1725f1e8b3d14172dffb.json  query-b3e90b7d5bed08de2e28d1285c11af08a29d430d5ce721a36f191cb9a35573df.json  query-e0f0cb6a05b5bbe28d1729f326c4fa3b25a27c7309ad345933e56278ff4d26f4.json
assets/: pre-commit.sh
client/: Cargo.toml
cmd/: root.go
cmd/admin/: cmd.go
cmd/admin/useradd/: cmd.go  cmd_test.go  run.go
cmd/admin/userdel/: cmd.go  cmd_test.go  run.go
cmd/migrate/: cmd.go  cmd_test.go  run.go
cmd/server/: cmd.go  run.go
migrations/: Cargo.toml  justfile
migrations/src/: lib.rs  main.rs
migrations/src/migrations/: 002_repos.sql  003_reports.sql
pkg/api/: ErrorResponse.yaml  openapi-schema.json  openapi-schema.json.LICENCE  openapi-schema.json.LICENSE
pkg/api/auth/: adapter.go  argon2_test.go  auth.go  auth_model.conf  auth_test.go  policies.csv
pkg/api/docs/redoc/: redoc.go
pkg/api/docs/scalar/: index.html  scalar.go
pkg/api/health/: docs.go  gen.go  oapi-codegen.yaml  openapi.json  openapi.yaml  server.go  server_test.go  service.go  service_test.go
pkg/api/obs/: docs.go  gen.go  healthz.go  metrics.go  oapi-codegen.yaml  openapi.go  openapi.json  openapi.yaml  server.go  server_test.go
pkg/api/rest/: auth.go  authorizer.go  docs.go  gen.go  oapi-codegen.yaml  openapi.json  openapi.yaml  parsereport.go  ping.go  server.go  server_test.go
pkg/auth/: argon2.go  argon2_test.go  auth.go  auth_test.go
pkg/covtest/: kong.go  tb.go
pkg/db/: auditlog.go  cli.go  connect.go  migrate.go  migrate_test.go  models.go  querier.go  queries.sql  queries.sql.go  testinfra.go  testinfra_test.go
pkg/db/migrations/: 20250501100730_audit_log.up.sql  20250501100731_users.up.sql  20250501113423_repos.up.sql  20250501113445_reports.up.sql  20250505180210_authentication.up.sql
pkg/db/pgutil/: conversion.go  conversion_test.go
pkg/health/: gen.go  healthz.go  metrics.go  openapi.go  openapi.json  openapi.yaml  server.go  server_test.go  service.go  service_test.go
pkg/infra/binds/: binds.go
pkg/infra/closer/: closer.go  closer_test.go
pkg/infra/env/: env.go  env_test.go
pkg/infra/log/: cli.go  log.go
pkg/ptr/: ptr.go  ptr_test.go
pkg/report/: report.go
pkg/report/ctxerr/: contextualerror.go  contextualerror_test.go
pkg/report/cursor/: cursor.go  cursor_test.go
pkg/report/golang/: parser.go  parser_test.go  report.go
pkg/report/jacoco/: report.go  report_test.go
pkg/rest/: gen.go  oapi-codegen.yaml  openapi.go  openapi.json  openapi.yaml  ping.go  server.go  server_test.go
pkg/secret/: secret.go  secret_test.go
proto/: Cargo.toml
proto/proto/: report.proto  report.v0.proto
proto/src/: auth.rs  either.rs  error.rs  health.rs  lib.rs  ping.rs  version.rs
samples/c/: helpers.c  helpers.h  justfile  meson.build  sample.c  sample.h  sample_test.c
samples/cpp/: justfile  meson.build  sample.cpp  sample.hpp  sample_test.cpp
samples/golang/: go.mod  justfile  sample.go  sample_test.go  uncalled.go
samples/golang/uncalled/: uncalled.go
samples/java/: justfile  pom.xml
samples/java/src/main/java/: Sample.java
samples/java/src/main/java/dev/mardroemmar/cov/sample/: Sample.java  UncalledClass.java
samples/java/src/main/java/dev/mardroemmar/cov/sample/uncalled/: UncalledPackage.java
samples/java/src/test/java/dev/mardroemmar/cov/sample/: SampleTest.java
samples/jest/: helpers.js  index.js  index.test.js  jest.config.js  justfile  package-lock.json  package.json
samples/kotlin/: justfile  pom.xml
samples/kotlin/src/main/kotlin/: Sample.kt
samples/kotlin/src/main/kotlin/dev/mardroemmar/cov/sample/: Sample.kt  UncalledClass.kt  UncalledCompanionObject.kt  UncalledObject.kt
samples/kotlin/src/main/kotlin/dev/mardroemmar/cov/sample/uncalled/: uncalledPackage.kt
samples/kotlin/src/test/kotlin/dev/mardroemmar/cov/sample/: SampleTest.kt
samples/rust/: Cargo.toml  justfile
samples/rust/src/: lib.rs
scripts/yaml2json/: main.go  main_test.go
server/: Cargo.toml
server/src/: database.rs  health.rs  http.rs  main.rs  report.rs
server/src/database/: cleaner.rs  create_org.rs  create_repo.rs  encryption.rs  health.rs  model.rs  pools.rs  users.rs
server/src/http/: health.rs  rest.rs
server/src/http/rest/: auth.rs  create_org.rs  frontend.rs  get_user.rs  ping.rs  test.rs  v0.rs
server/src/http/rest/v0/: auth.rs  ping.rs  test.rs
server/src/migrations/: V1__setup_tables.sql  V1__users.sql
server/src/report/: golang.rs  jacoco.rs  lcov.rs
web/: biome.jsonc  justfile  openapi-ts.config.ts  package-lock.json  package.json
web/src/__tests__/: example.ts
web/src/api/: client.gen.ts  sdk.gen.ts  types.gen.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/repositories/: page.tsx
web/src/components/: header.tsx  vertical-separator.tsx
web/src/components/ui/: select.tsx  separator.tsx
web/src/hooks/: organisation.tsx  user.tsx
web/src/model/: auth.ts  organisation.ts  secret.ts
