[workspace]
resolver = "2"
members = ["server", "client", "proto"]

[workspace.package]
authors = ["Mariell Hoversholm <mariell@mardroemmar.dev>"]
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85"
description = "Code coverage tracking and UI."
publish = false

[workspace.dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "^0.12"
tonic-build = "^0.12"
