[workspace]
resolver = "2"
members = ["server", "client", "proto", "samples/rust"]

[workspace.package]
authors = ["Mariell Hoversholm <mariell@mardroemmar.dev>"]
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85"
description = "Code coverage tracking and UI."
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
