[workspace]
resolver = "2"
members = ["server", "client", "proto", "migrations"]

[workspace.package]
authors = ["Mariell Hoversholm <mariell@mardroemmar.dev>"]
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85"
description = "Code coverage tracking and UI."
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v7"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "migrate",
    "macros",
    "derive",
    "uuid",
    "chrono",
] }
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
eyre = "0.6"
tokio = { version = "1.43", features = ["full", "tracing"] }
metrics = "0.24"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
futures = "0.3"
thiserror = "2.0"
dotenvy = "0.15.7"
zeroize = { version = "1.8", features = ["derive"] }
aws-lc-rs = "1.12"
secrecy = "0.10"
pretty_assertions = "1.4"
either = { version = "1.15", features = ["serde"] }
axum = "0.8"
aide = { version = "0.14", features = ["axum", "axum-json", "scalar"] }
