[package]
name = "cov-migrations"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cov-migrations"
path = "src/main.rs"

[dependencies]
clap.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tokio.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
