[package]
name = "proto"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
schemars.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
axum.workspace = true
aide.workspace = true
either.workspace = true
