[package]
name = "cov-server"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.31", features = ["derive", "env"] }
color-eyre = "0.6"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
eyre = "0.6"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
proto.path = "../proto"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
chrono.workspace = true
tokio = { version = "^1.43", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.13", features = [
  "with-serde_json-1",
  "with-time-0_3",
] }
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
aide = { version = "0.14.1", features = ["axum", "axum-json", "scalar"] }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
futures = "0.3.31"
uuid = { workspace = true, features = ["fast-rng"] }
thiserror = "2.0.12"
bytes = "1.10.1"
