[package]
name = "cov-server"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
deadpool-postgres = { version = "0.14", features = ["serde"] }
eyre = "0.6"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
proto.path = "../proto"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono.workspace = true
tokio = { version = "^1.43", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-time-0_3",
] }
native-tls = "0.2"
postgres-native-tls = "0.5"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
aide = { version = "0.14", features = ["axum", "axum-json", "scalar"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
futures = "0.3"
uuid = { workspace = true, features = ["fast-rng"] }
thiserror = "2.0"
bytes = "1.10"
winnow = "0.7"
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
ahash = "0.8"
schemars.workspace = true
axum-proxy = { version = "0.3.0", features = ["http2", "axum"] }
include_dir = "0.7.4"
axum-login = "0.17.0"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
dev = []
