[package]
name = "cov-server"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
either.workspace = true
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = { version = "0.16", default-features = false }
proto.path = "../proto"
serde.workspace = true
serde_json = "1.0"
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aide.workspace = true
futures.workspace = true
uuid = { workspace = true, features = ["fast-rng"] }
thiserror.workspace = true
bytes = "1.10"
winnow = "0.7"
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
ahash = "0.8"
schemars.workspace = true
axum-proxy = { version = "0.3", features = ["http2", "axum"] }
include_dir = "0.7"
axum-login = "0.17"
secrecy.workspace = true
dotenvy.workspace = true
zeroize.workspace = true
aws-lc-rs.workspace = true
cov-migrations.path = "../migrations"
sqlx.workspace = true
argon2 = { version = "0.5.3", features = ["zeroize", "std"] }
async-trait = "0.1.88"
tower-sessions = "0.14.0"

[dev-dependencies]
pretty_assertions.workspace = true

[features]
dev = []
